; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_filedlg.c_get_config_key_string.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_filedlg.c_get_config_key_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_SZ = common dso_local global i64 0, align 8
@REG_EXPAND_SZ = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32*, i32**)* @get_config_key_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_config_key_string(i64 %0, i32* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  store i64 %0, i64* %5, align 8
  store i32* %1, i32** %6, align 8
  store i32** %2, i32*** %7, align 8
  %11 = load i64, i64* %5, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %29

13:                                               ; preds = %3
  %14 = load i64, i64* %5, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i64 @RegQueryValueExW(i64 %14, i32* %15, i32 0, i64* %8, i32* null, i64* %9)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %29, label %18

18:                                               ; preds = %13
  %19 = load i64, i64* %8, align 8
  %20 = load i64, i64* @REG_SZ, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %28

22:                                               ; preds = %18
  %23 = load i64, i64* %8, align 8
  %24 = load i64, i64* @REG_EXPAND_SZ, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %22
  %27 = load i32, i32* @FALSE, align 4
  store i32 %27, i32* %4, align 4
  br label %45

28:                                               ; preds = %22, %18
  br label %29

29:                                               ; preds = %28, %13, %3
  %30 = load i64, i64* %9, align 8
  %31 = call i32* @heap_alloc(i64 %30)
  store i32* %31, i32** %10, align 8
  %32 = load i64, i64* %5, align 8
  %33 = load i32*, i32** %6, align 8
  %34 = load i32*, i32** %10, align 8
  %35 = call i64 @RegQueryValueExW(i64 %32, i32* %33, i32 0, i64* %8, i32* %34, i64* %9)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %41

37:                                               ; preds = %29
  %38 = load i32*, i32** %10, align 8
  %39 = call i32 @heap_free(i32* %38)
  %40 = load i32, i32* @FALSE, align 4
  store i32 %40, i32* %4, align 4
  br label %45

41:                                               ; preds = %29
  %42 = load i32*, i32** %10, align 8
  %43 = load i32**, i32*** %7, align 8
  store i32* %42, i32** %43, align 8
  %44 = load i32, i32* @TRUE, align 4
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %41, %37, %26
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local i64 @RegQueryValueExW(i64, i32*, i32, i64*, i32*, i64*) #1

declare dso_local i32* @heap_alloc(i64) #1

declare dso_local i32 @heap_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
